<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- Mapa -->
    <item
        android:id="@+id/action_map"
        android:icon="@android:drawable/ic_dialog_map"
        android:title="@string/action_map"
        app:showAsAction="always" />

    <!-- Registrar libro -->
    <item
        android:id="@+id/action_register_book"
        android:icon="@android:drawable/ic_input_add"
        android:title="@string/action_register_book"
        app:showAsAction="always" />

    <!-- Favoritos -->
    <item
        android:id="@+id/action_view_favorites"
        android:icon="@drawable/ic_star_filled"
        android:title="@string/action_view_favorites"
        app:showAsAction="ifRoom" />

    <!-- Configuración -->
    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_settings_24dp"
        android:title="@string/menu_settings"
        app:showAsAction="never" />

</menu>
